--- a/curam.html
+++ b/curam.html
@@ -2,36 +2,42 @@
 <html>
     <head>
          <link href="tabulator-master/dist/css/tabulator.min.css" rel="stylesheet">
-         <script type="text/javascript" src="tabulator-master/dist/js/tabulator.min.js"></script>
+         <script type="text/javascript" src="tabulator-master/dist/js/tabulator.js"></script>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
          <!-- XLXS FORMAT -->
          <script type="text/javascript" src="http://oss.sheetjs.com/js-xlsx/xlsx.full.min.js"></script>
          <!-- PDF FORMAT -->
          <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.0.5/jspdf.plugin.autotable.js"></script>
-                 </head>
+    </head>
 <body>
 
 <h2>CURAM STEP TEST TOOL</h2>
 
-<div class="table-controls-legend">Row Controls</div>
+<div class="table-controls-legend">File Controls</div>
+<div class="file-controls">
+        <button id="file-load-trigger">Open File</button>
+        <button id="save-load-trigger">Save File</button>
+    </div>
 
+<div class="table-controls-legend">Row Controls</div>
 <div class="table-controls">
-      <button id="file-load-trigger">Open File</button>
       <button id="add-row">Insert Row</button>
       <button id="del-row">Remove Row 1"</button>
       <button id="clear">Empty the table</button>
       <button id="reset">Reset</button>
-      <button id="download-csv">Download CSV</button>
-      <button id="download-json">Download JSON</button>
-      <button id="download-xlsx">Download XLSX</button>
-      <button id="download-pdf">Download PDF</button>
 </div>
 
 <div id="example-table"></div>
 
-<h3>PUT JSON DATA HERE</h3>
-
+<div class="output-controls">
+        <button id="reset">Reset</button>
+        <button id="download-csv">Download CSV</button>
+        <button id="download-json">Download JSON</button>
+        <button id="download-xlsx">Download XLSX</button>
+        <button id="download-pdf">Download PDF</button>
+  </div>
+  
 <script>
 var tabledata = [
  	{id:1, function:"Function 1", name:"Name 1", value:"Value 1", ret:"Return Function 1"},
@@ -58,19 +64,26 @@ var tabledata = [
 
 //Build Tabulator
 var table = new Tabulator("#example-table", {
+    height:"350px",
+    autoColumns:true,
+    placeholder:"Awaiting Data, Please Load File",
+
     data:tabledata,           //assign data to table
 	layout:"fitColumns",      //fit columns to width of table
 	responsiveLayout:"hide",  //hide columns that dont fit on the table
 	tooltips:true,            //show tool tips on cells
 	addRowPos:"top",          //when adding a new row, add it to the top of the table
 	history:true,             //allow undo and redo actions on the table
-	pagination:"local",       //paginate the data
-	paginationSize:7,         //allow 7 rows per page of data
-	movableColumns:true,      //allow column order to be changed
+    movableColumns:true,      //allow column order to be changed
+	movableRows:true,      //allow column order to be changed
 	resizableRows:true,       //allow row order to be changed
-	initialSort:[             //set the initial sort order of the data
-		{column:"function", dir:"asc"},
-	],
+    clipboard:true,
+    clipboardPasteAction:"replace",
+//	pagination:"local",       //paginate the data
+//	paginationSize:7,         //allow 7 rows per page of data
+//  initialSort:[             //set the initial sort order of the data
+// 	{column:"function", dir:"asc"},
+// ],
     columns:[
         {title:"Function", field:"function", width:200, editor:"input"},
         {title:"Name", field:"name", width:100, align:"right", sorter:"number", editor:"input"},
@@ -79,6 +92,10 @@ var table = new Tabulator("#example-table", {
     ],
 });
 
+//trigger AJAX load on "Load Data via AJAX" button click
+$("#file-load-trigger").click(function(){
+    table.setDataFromLocalFile();
+});
 //trigger AJAX load on "Load Data via AJAX" button click
 $("#file-load-trigger").click(function(){
     table.setDataFromLocalFile();
@@ -130,9 +147,9 @@ $("#download-pdf").click(function(){
 
 
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
-
+onclick="document.getElementById('demo').innerHTML = 'Test Success'">
+Execute Test</button>
+<!-- onclick="document.getElementById('demo').innerHTML = Date()" -->
 <p id="demo"></p>
 
 </body>
